# binaural_beats_selection

./: .gitignore  docker-compose.yml
backend/: .gitignore  app.py  config.py  docker-entrypoint.sh  pyproject.toml
backend/api/: __init__.py  admin_config.py  models.py
backend/api/blueprints/: v1.py
backend/api/resources/: beat.py  rating.py  sound.py  subject.py
backend/migrations/versions/: 42119e68b17e_added_the_iads_volume_column_in_subject_.py  7dbcb1055b96_initial_migration.py
docker/: .env.example
docker/nginx/: nginx.conf
docker/web/: Dockerfile
frontend/: craco.config.js  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: BeatButton.js  BeatVolumeTest.js  IADSVolumeTest.js  RegisterForm.js  VolumeTest.js
frontend/src/pages/: BeatsSelector.js  End.js  PostInstruction.js  PostRating.js  PostSound.js  PreInstruction.js  PreRating.js  PreSound.js  RegisterPage.js
frontend/src/stores/: index.js
frontend/src/utils/: api.js  beats.js
