[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sangsoo Jin <constantlyjin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
Flask-Cors = "^3.0.10"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-Admin = "^1.5.8"
Flask-BasicAuth = "^0.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
